2003-08-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_hint): Complete rewrite to make the
	selection far more random.

2003-08-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_hint): Rewritten to be a 3-phase
	scheme. It uses Juhani Heino's code to first do a check for
	squares which are both near a mine *and* an uncleared square to
	try and give the player a bit of a hand when they are stuck with
	ambiguous hints. Unfortunately this highlights a failing with the
	previous algorithm where the location of the revealed tile is
	heavily influenced by the geometry of the revealed squares
	(e.g. the revealed square is highly likely to be at the bottom
	right of the revealed area.
	
2003-08-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c:
	* minefield.h:
	Take the random number generator out of _randomize and make it a
	property of the widget.
	
	* minefield.h:
	* gnomine.c: Added support for giving a hint. If possible a spot
	adjacent to a mine is cleared and a ten-second penalty is
	imposed. If not then a helpful (?) message is given. This was
	suggested by Juhani Heino <juhani.heino@1posti.net>.

2003-08-11  William Jon McCann  <mccann@jhu.edu>

	* gnomine.c:
	* minefield.c: Added license header comments.

	* gnomine.c (new_game): Make the game window stay the
	same size when the dimensions of the field change.

2003-08-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Make a little more compatible
	with automake-1.7.

2003-07-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_init): Made the assignments from
	Steve's patch slightly more explicit. This is just a matter of
	style and pedanticism.

2003-07-24  Steve Chaplin
	* minefield.h: Add a field to struct _Sign to hold a pixbuf.

	* minefield.c (_setup_sign): Check for error when reading pixbuf.
	Read each pixbuf from file just once, not at every expose event.