@@ -1,3 +1,8 @@
+2003-08-28  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* minefield.c (gtk_minefield_hint): Updated some comments, added a
+	lymeric.
+
 2003-08-27  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* minefield.c (gtk_minefield_hint): Complete rewrite to make the
